<resources>
    <string name="app_name">Foodie</string>
    <string name="title_personal_recipes">My Recipes</string>
    <string name="title_public_recipes">Public Recipes</string>
    <string name="title_fridge">Fridge</string>
    <string name="title_profile">Profile</string>
    <string name="register_now">Register</string>
    <string name="welcome_to_foodie">Welcome to Foodie</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have an account yet?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="daily_recipe">Daily Recipe</string>
    <string name="step_by_step_instructions">Step by step instructions</string>
    <string name="recipe_ingredients">Recipe ingredients</string>
    <string name="daily_recipe_name">Name</string>
    <string name="instructions">Instructions</string>
    <string name="title_add_recipe">Create a new recipe</string>
    <string name="profile_name">Profile name</string>
    <string name="account_email">Account email</string>
    <string name="email_address">Email address</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="daily_ingredient_name">Name</string>
    <string name="daily_ingredient_amount">Amount</string>
    <string name="daily_ingredient_unit">Unit</string>
    <string name="ready_in">Ready in</string>
    <string name="preparation_time">Preparation time</string>
    <string name="servings">Servings</string>
    <string name="shopping_list">Shopping List</string>
    <string name="log_out">Log Out</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="map">Map</string>
    <string name="title_my_followers">My Followers</string>
    <string name="favourite_recipes">Favourite Recipes</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="recipe_name">Recipe name</string>
    <string name="publicRecipe">Public</string>
    <string name="enter_recipe_title">Enter recipe title</string>
    <string name="recipe_category">Recipe category</string>
    <string name="upload">Upload</string>
    <string name="add_a_new_recipe_ingredient">Add a new recipe ingredient</string>
    <string name="qty">Qty</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="enter_step_by_step_instructions">Enter step by step instructions</string>
    <string name="search">Search</string>
    <string name="bought">Bought</string>
    <string name="publisher">Publisher</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="search_for_recipes">Search For Recipes</string>
    <string name="button">Button</string>
    <string name="recipes">Recipes</string>
    <string name="fridge">Fridge</string>
    <string name="editRecipe">Edit recipe</string>
    <string name="editIngredient">Edit ingredient</string>
    <string name="my_network">My Network</string>
    <string name="follower_s_handle_here">Follower\'s handle here</string>
    <string name="follower">Follower</string>
</resources>