<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_personal_recipes"
        android:icon="@drawable/ic_recipes"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/fragment_fridge"
        android:icon="@drawable/ic_fridge"
        android:title="@string/title_fridge" />

    <item
        android:id="@+id/fragment_personal_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
    <item

        android:id="@+id/fragment_daily_recipe"
        android:icon="@drawable/ic_recipes"
        android:title="@string/daily_recipe" />
    <item
        android:id="@+id/fragment_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"/>
</menu>