<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/shoppingList_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/ingredient_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoppingList_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:text="@string/quantity"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/shoppingList_item_name"
        app:layout_constraintEnd_toStartOf="@+id/shopping_add_virtual_fridge_button" />

    <Button
        android:id="@+id/shopping_add_virtual_fridge_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bought"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>