<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.DailyRecipeFragment"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/daily_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/daily_scrollView"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/daily_recipe_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="none"
                android:textSize="24sp"
                android:text="@string/daily_recipe_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/daily_recipe_ingredients_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/recipe_ingredients"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_preparation_time" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/daily_recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="@id/daily_recipe_ingredients_label"
                app:layout_constraintTop_toBottomOf="@+id/daily_recipe_ingredients_label" />

            <ImageView
                android:id="@+id/daily_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_recipes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_recipe_name" />

            <TextView
                android:id="@+id/daily_preparation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/ready_in"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_servings" />


            <TextView
                android:id="@+id/daily_instructions_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/step_by_step_instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_recipe_ingredients" />

            <TextView
                android:id="@+id/daily_instructions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_instructions_label" />

            <TextView
                android:id="@+id/daily_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/servings"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>